--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "baseUrl": ".",
+    "lib": [
+      "es2019"
+    ],
     "paths": {
       "@/*": [
         "./src/*"
